force-app/main/default/objects/VIAutorisation_pointage__c/VIAutorisation_pointage__c.object-meta.xml
<CustomObject>
    <label>Autorisation de pointage</label>
    <nameField>
        <displayFormat>B{0000000}</displayFormat>
        <label>Ref de Autorisation de pointage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autorisations de pointage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>