force-app/main/default/objects/VIAutorisation_pointage__c/fields/Code_affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Autorisations de pointage</relationshipLabel>
    <relationshipName>Autorisations_de_pointage</relationshipName>
    <type>Lookup</type>
</CustomField>