force-app/main/default/objects/VIAutorisation_pointage__c/fields/Date_du_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Date_du_mouvement__c</fullName>
    <label>Date du mouvement</label>
    <type>Date</type>
</CustomField>