force-app/main/default/objects/VIAutorisation_pointage__c/fields/Etat_du_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_mouvement__c</fullName>
    <label>Etat du mouvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>