force-app/main/default/objects/VIAutorisation_pointage__c/fields/Lib_affaire__c.field-meta.xml
<CustomField>
    <fullName>Lib_affaire__c</fullName>
    <formula>Code_affaire__r.Nom_affaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lib_affaire</label>
    <type>Text</type>
</CustomField>