force-app/main/default/objects/VIAutorisation_pointage__c/fields/Statut_autorisation_pointage__c.field-meta.xml
<CustomField>
    <fullName>Statut_autorisation_pointage__c</fullName>
    <label>Statut autorisation pointage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Statut_ecriture_comptable</valueSetName>
    </valueSet>
</CustomField>