force-app/main/default/objects/VIAutorisation_pointage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_affaire__c</columns>
    <columns>Date_du_mouvement__c</columns>
    <columns>Etat_du_mouvement__c</columns>
    <columns>Statut_autorisation_pointage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>